Implemented kafka consumer and a bit more for etl

--- a/.env.sample
+++ b/.env.sample
@@ -19,7 +19,7 @@ CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS=broker:29092
 CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS=1
 CONFLUENT_METRICS_ENABLE=true
 CONFLUENT_SUPPORT_CUSTOMER_ID=anonymous
-BOOTSTRAP_SERVER=localhost:9092
+BOOTSTRAP_SERVER=broker:29092
 MOVIE_VIEWS_TOPIC=views
 
 SCHEMA_REGISTRY_HOST_NAME=schema-registry
