--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,11 @@ services:
     ports:
       - "9092:9092"
       - "9101:9101"
+      - "29092:29092"
     env_file:
       - ./.env
+    healthcheck:
+      test: ["CMD", "nc", "-vz", "broker", "29092"]
 
 
   schema-registry:
