Added kafka healthcheck

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,8 @@ services:
       - '29092:29092'
     env_file:
       - ./.env
+    healthcheck:
+      test: [ "CMD", "nc", "-vz", "broker", "29092" ]
 
 
   schema-registry:
