--- a/Dockerfile-loader-kafka
+++ b/Dockerfile-loader-kafka
@@ -9,4 +9,4 @@ RUN pip install -r /loader_data_to_kafka/requirements/loader-kafka.txt --no-cach
 
 COPY ./loader_data_to_kafka /loader_data_to_kafka
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9999", "--reload"]
+CMD python core/waiter.py && uvicorn main:app --host 0.0.0.0 --port 9999 --reload
